# test_task_7

./: .gitignore  README.md
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  list_templates_form.json  main.py  pyproject.toml  pytest.ini
backend/api/: routers_setup.py
backend/api/forms/: router.py  services.py  validators.py
backend/api/healthcheck/: data_types.py  router.py
backend/config/: database.py  logger_config.yaml  settings.py
backend/env/: .env
backend/scripts/: run_app.sh
backend/tests/: conftest.py
backend/tests/fixtures/: forms.py
backend/tests/unit/forms/: parametrize_data.py  test_services.py  test_validators.py
postman/: TestTask.postman_collection_v_2.json  TestTask.postman_collection_v_2_1.json
