[tool.poetry]
name = "Test task"
version = "0.1.0"
description = "Test task for LeadHit company"
authors = ["mrKazzila <mrkazzila@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.1"

fastapi = {extras = ["all"], version = "^0.102.0"}
python-json-logger = "^2.0.7"

motor = "^3.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-dotenv = "^0.5.2"
coverage = "^7.3.0"
httpx = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
